[tool.poetry]
name = "chapter3"
version = "0.1.0"
description = ""
authors = ["Adi <afcadinho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pynput = "^1.8.1"
pytesseract = "^0.3.13"
pyautogui = "^0.9.54"
playsound = "1.2.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
